<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MenuLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?themeColorPrimary"
    tools:context=".activities.MenuActivity">

    <TextView
        android:id="@+id/subLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/sub_logo"
        android:textAlignment="textEnd"
        android:textColor="?themeContrastText"
        android:textSize="@dimen/sublogo_font"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="monospace"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="?themeContrastText"
        android:textSize="@dimen/logo_font"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <Button
        android:id="@+id/ButtonContinue"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/theme_button"
        android:fontFamily="monospace"
        android:text="@string/button_continue"
        android:textSize="@dimen/menu_reset_button_font"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subLogo" />

    <Button
        android:id="@+id/ButtonNewGame"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/theme_button"
        android:fontFamily="monospace"
        android:text="@string/button_new_game"
        android:textSize="@dimen/menu_reset_button_font"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonContinue" />

    <Button
        android:id="@+id/ButtonSettings"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/theme_button"
        android:fontFamily="monospace"
        android:text="@string/button_settings"
        android:textSize="@dimen/menu_reset_button_font"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonNewGame" />

    <TextView
        android:id="@+id/AboutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="21dp"
        android:fontFamily="monospace"
        android:text="@string/button_about"
        android:textAllCaps="true"
        android:textColor="?themeContrastText"
        android:textSize="@dimen/small_font"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>