<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="?themeColorPrimary"
    tools:context=".activities.SettingsActivity">

    <Button
        android:id="@+id/colorThemeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/theme_button"
        android:fontFamily="monospace"
        android:text="Set Color Theme"
        android:textAllCaps="true"
        android:textSize="@dimen/menu_reset_button_font"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/subLogo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highlightTint" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="monospace"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="?themeContrastText"
        android:textSize="@dimen/logo_font"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/subLogo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subLogo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="monospace"
        android:text="@string/sub_logo"
        android:textAlignment="textEnd"
        android:textColor="?themeContrastText"
        android:textSize="@dimen/sublogo_font"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/colorThemeButton" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?themeColorMenuBar"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="?themeTextColorPrimary" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/autoplaySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:checked="true"
        android:fontFamily="monospace"
        android:textAlignment="center"
        android:typeface="@color/greenLightTarget"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.333"
        app:trackTint="?themeTextColorPrimary"
        tools:checked="true" />

    <SeekBar
        android:id="@+id/autoplaySpeed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:max="1900"
        android:progressBackgroundTint="@color/black"
        android:progressTint="?themeTextColorPrimary"
        android:thumbTint="?themeButtonStroke"
        app:layout_constraintBottom_toTopOf="@+id/highlightTint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <SeekBar
        android:id="@+id/highlightTint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:max="255"
        android:progressBackgroundTint="@color/black"
        android:progressTint="?themeTextColorPrimary"
        android:thumbTint="?themeButtonStroke"
        app:layout_constraintBottom_toTopOf="@+id/colorThemeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoplaySpeed" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="monospace"
        android:text="@string/pref_title_autoplay"
        android:textAlignment="textEnd"
        android:textAllCaps="true"
        android:textColor="?themeContrastText"
        android:textSize="@dimen/menu_reset_button_font"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/autoplaySpeed"
        app:layout_constraintEnd_toStartOf="@+id/autoplaySwitch"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSettings"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="monospace"
        android:text="@string/pref_title_animation_speed"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="?themeContrastText"
        android:textSize="@dimen/menu_reset_button_font"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/autoplaySpeed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/HintingHighlightsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="monospace"
        android:text="Hinting Highlights"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="?themeContrastText"
        android:textSize="@dimen/menu_reset_button_font"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/highlightTint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/sampleCardHolder"
        android:layout_width="@dimen/preview_card_width"
        android:layout_height="@dimen/preview_card_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998" />

</androidx.constraintlayout.widget.ConstraintLayout>